# psrdada_cpp

./: .gitignore  CMakeLists.txt
cmake/: compiler_settings.cmake  cuda.cmake  psrdada.cmake  thirdparty.cmake
docker/: Dockerfile
log/: header_data.txt
psrdada_cpp/: CMakeLists.txt  cli_utils.hpp  cuda_utils.hpp  dada_client_base.hpp  dada_output_stream.hpp  double_buffer.hpp  multilog.hpp
psrdada_cpp/cryopaf/: Beamformer.cuh  BufferTypes.cuh  CMakeLists.txt  DeviceFunc.cuh  IOHandle.cuh  Pipeline.cuh  PipelineInterface.cuh  PowerBeamformer.cuh  QueueHeader.hpp  Tensor.cuh  TextureMem.cuh  Types.cuh  Unpacker.cuh  VoltageBeamformer.cuh  cryopaf_conf.hpp  run.sh  types.cuh
psrdada_cpp/cryopaf/beamforming/: CMakeLists.txt  CuKernels.cuh  CuTexture.cuh  PowerBeamformer.cuh  VoltageBeamformer.cuh  cu_beamformer.cuh  cu_kernels.cuh
psrdada_cpp/cryopaf/beamforming/src/: CuKernels.cu  CuTexture.cu  PowerBeamformer.cu  VoltageBeamformer.cu  beamforming_cli.cu  cu_beamformer.cu  cu_kernels.cu
psrdada_cpp/cryopaf/beamforming/test/: CMakeLists.txt  PowerBeamformTester.cuh  VoltageBeamformTester.cuh  beamformer_tester.cuh
psrdada_cpp/cryopaf/beamforming/test/profiling/: CMakeLists.txt  profiling.cu
psrdada_cpp/cryopaf/beamforming/test/src/: PowerBeamformTester.cu  VoltageBeamformTester.cu  beamforming_tester.cu  gtest_beamforming.cpp  gtest_beamforming.cu
psrdada_cpp/cryopaf/details/: BeamformerKernels.cu  DeviceFunc.cu  PowerBeamformerKernels.cu  UnpackerKernels.cu  VoltageBeamformerKernels.cu  header_dada.txt  header_output_dada.txt  utils.cu
psrdada_cpp/cryopaf/plot/: cu_colormap.cu  cu_colormap.cuh
psrdada_cpp/cryopaf/profiling/: CMakeLists.txt  KernelStatistics.cuh  profiling.cu
psrdada_cpp/cryopaf/profiling/Results/2080/: power_kernel.csv  unpacker_kernel.csv  voltage_kernel.csv
psrdada_cpp/cryopaf/profiling/Results/3090/: power_kernel.csv  unpacker_kernel.csv  voltage_kernel.csv
psrdada_cpp/cryopaf/profiling/src/: KernelStatistics.cu
psrdada_cpp/cryopaf/profiling/tools/: CMakeLists.txt  benchmark.py  device_query.cpp  plot_benchmark.py
psrdada_cpp/cryopaf/src/: Beamformer.cu  Pipeline.cu  PipelineInterface.cu  PowerBeamformer.cu  Tensor.cu  TextureMem.cu  Unpacker.cu  VoltageBeamformer.cu  beamforming_cli.cu  weightupdater_cli.cu
psrdada_cpp/cryopaf/test/: BeamformTester.cuh  CMakeLists.txt  PowerBeamformTester.cuh  UnpackerTester.cuh  VoltageBeamformTester.cuh
psrdada_cpp/cryopaf/test/profiling/: CMakeLists.txt  profiling.cu
psrdada_cpp/cryopaf/test/profiling/tools/python/: benchmark.py  plot_benchmark.py  sort_gpu_output.py
psrdada_cpp/cryopaf/test/profiling/tools/python/benchmark/: benchmark.csv  benchmark_beanfarmer.csv
psrdada_cpp/cryopaf/test/src/: BeamformTester.cu  PowerBeamformTester.cu  UnpackerTester.cu  VoltageBeamformTester.cu  gtest_beamforming.cu
psrdada_cpp/cryopaf/tools/: sort_gpu_output.py  utils.hpp
psrdada_cpp/cryopaf/tools/plot/: bitmap_io.hpp
psrdada_cpp/cryopaf/tools/python/: cpu_result.txt  gpu_result.txt  test.txt
psrdada_cpp/cryopaf/tools/python/benchmark/: benchmark_beanfarmer_edited.ods
psrdada_cpp/detail/: dada_input_stream.cpp  double_buffer.cpp
psrdada_cpp/effelsberg/: CMakeLists.txt
psrdada_cpp/effelsberg/paf/: CMakeLists.txt
psrdada_cpp/effelsberg/paf/capture/: CMakeLists.txt  CaptureController.hpp  CaptureMonitor.hpp  Catcher.hpp  Receive.hpp  Socket.hpp  Threading.hpp  Transmit.hpp  Types.hpp  UDPSocket.hpp
psrdada_cpp/effelsberg/paf/capture/details/: Catcher.cpp  Receive.cpp  Transmit.cpp  UDPSocket.cpp
psrdada_cpp/effelsberg/paf/capture/doc/: state_machine.txt
psrdada_cpp/effelsberg/paf/capture/src/: CaptureController.cpp  CaptureMonitor.cpp  Catcher.cpp  Socket.cpp  capture_cli.cpp  codifrecv_cli.cpp  codifsend_cli.cpp
psrdada_cpp/effelsberg/paf/capture/test/: CMakeLists.txt  CaptureTester.hpp  PacketTester.hpp  Transmitter.hpp
psrdada_cpp/effelsberg/paf/capture/test/src/: CaptureTester.cpp  PacketTester.cpp  Transmitter.cpp  gtest_capture.cpp
psrdada_cpp/effelsberg/paf/test/: UnpackerTester.cuh
psrdada_cpp/effelsberg/paf/test/src/: UnpackerTester.cu
psrdada_cpp/effelsberg/paf/unpacker/: CMakeLists.txt  Unpacker.cuh
psrdada_cpp/src/: cli_utils.cpp  dada_client_base.cpp  dada_output_stream.cpp  dada_write_client.cpp
